# Communications-In-Flight-Airplane-Ground-Control

./: .gitignore  AGENT_BUILD_SPEC.md  AGENT_CHANGELOG.md  CMakeLists.txt  Changelog.md  README.md  changelog.md
.github/workflows/: cross-platform-verification.yml  windows-sprint1-verification.yml
ATCServer/: ATCServer.slnx
ATCServer/ATCServer/: ATCServer.cpp  ATCServer.vcxproj  ATCServer.vcxproj.filters
Client/AirplaneClient/: AirplaneClient.sln
Client/AirplaneClient/AirplaneClient/: AirplaneClient.cpp  AirplaneClient.vcxproj  AirplaneClient.vcxproj.filters  ClientState.h  PacketHeader.h  PacketType.h
Server/: AuthorizedAircraft.txt
Server/GroundControl/: GroundControl.sln
Server/GroundControl/GroundControl/: BlackBoxLogger.h  Checksum.cpp  Checksum.h  CommandGate.h  GroundControl.cpp  GroundControl.vcxproj  GroundControl.vcxproj.filters  LargeFilePayload.h  PacketHeader.h  PacketType.h  ServerDashboard.h  ServerDashboardHelpers.h  ServerState.h  TelemetryPayload.h  WeatherMapSender.cpp  WeatherMapSender.h  server_packet_log.txt
Server/GroundControl/GroundControl/x64/Debug/: GroundControl.exe.recipe  vc143.idb
Server/GroundControl/GroundControl/x64/Debug/GroundControl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GroundControl.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Shared/: PacketLogger.h  SocketUtils.h
ci/: analysis_common.py  analyze_project.py  verify_runtime.py
client/: aircraft_client.cpp  aircraft_client.h  client_app.cpp  client_app.h  client_options.cpp  client_options.h  client_utils.cpp  client_utils.h  flight_sim.cpp  flight_sim.h  main.cpp
common/: logger.cpp  logger.h  socket_utils.h
reports/: README.md
server/: client_session.cpp  client_session.h  dashboard_state.cpp  dashboard_state.h  ground_server.cpp  ground_server.h  imgui_dashboard.cpp  imgui_dashboard.h  main.cpp  server_dashboard_sync.cpp  server_dashboard_sync.h  server_options.cpp  server_options.h  server_session_logic.cpp  server_session_logic.h  server_utils.cpp  server_utils.h  weather_map.cpp  weather_map.h
tests/: checksum_tests.cpp  client_options_tests.cpp  client_session_tests.cpp  client_utils_tests.cpp  dashboard_state_tests.cpp  imgui_dashboard_tests.cpp  large_file_payload_tests.cpp  logger_tests.cpp  packet_header_tests.cpp  server_dashboard_sync_tests.cpp  server_options_tests.cpp  server_session_logic_tests.cpp  server_utils_tests.cpp  socket_utils_tests.cpp  state_machine_tests.cpp  telemetry_payload_tests.cpp  test_helpers.h  weather_map_tests.cpp
